Profile + ServiceDetail (chưa làm đc)

--- a/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textSize="20sp"
+            android:text="@string/profile"
             app:fontFamily="@font/open_sans_bold"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -43,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableStart="@drawable/selector_sign_email_icon"
+            android:drawableStart="@drawable/selector_sign_person_icon"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
@@ -51,7 +52,7 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_edit_profile_"
+        android:id="@+id/til_edit_profile_gender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20sp"
@@ -67,7 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableStart="@drawable/selector_sign_email_icon"
+            android:drawableTint="@color/Gray3"
+            android:drawableStart="@drawable/ic_gender"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
@@ -91,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableStart="@drawable/selector_sign_email_icon"
+            android:drawableStart="@drawable/ic_birthday"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
@@ -115,7 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableStart="@drawable/selector_sign_email_icon"
+            android:drawableStart="@drawable/ic_baseline_call_24"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
