--- a/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
@@ -88,17 +88,17 @@
         app:boxStrokeColor="@color/Green1"
         app:hintTextColor="@color/Green1"
         >
+
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_profile_name"
+            android:id="@+id/edt_profile_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="1"
             android:drawableStart="@drawable/ic_birthday"
-            android:fontFamily="@font/open_sans"
-            android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
+            android:fontFamily="@font/open_sans"
             android:hint="Date"
-            />
+            android:inputType="textEmailAddress"
+            android:lines="1" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_edit_profile_telelphone"
