--- a/GardeningServices/app/src/main/res/drawable/corner_edt.xml
+++ b/GardeningServices/app/src/main/res/drawable/corner_edt.xml
@@ -4,5 +4,5 @@
     <corners android:radius="5dp"/>
     <stroke
 
-        android:width="1dp" android:color="@color/Gray3"/>
+        android:width="1dp" android:color="@color/Corner1"/>
 </shape>
