--- a/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
@@ -21,7 +21,6 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textSize="20sp"
-            android:text="@string/profile"
             app:fontFamily="@font/open_sans_bold"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -44,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableStart="@drawable/selector_sign_person_icon"
+            android:drawableStart="@drawable/selector_sign_email_icon"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
@@ -52,7 +51,7 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_edit_profile_gender"
+        android:id="@+id/til_edit_profile_"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20sp"
@@ -68,8 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableTint="@color/Gray3"
-            android:drawableStart="@drawable/ic_gender"
+            android:drawableStart="@drawable/selector_sign_email_icon"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
@@ -88,17 +86,17 @@
         app:boxStrokeColor="@color/Green1"
         app:hintTextColor="@color/Green1"
         >
-
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_profile_date"
+            android:id="@+id/edt_profile_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_birthday"
-            android:drawablePadding="10dp"
+            android:lines="1"
+            android:drawableStart="@drawable/selector_sign_email_icon"
             android:fontFamily="@font/open_sans"
-            android:hint="Date"
             android:inputType="textEmailAddress"
-            android:lines="1" />
+            android:drawablePadding="10dp"
+            android:hint="Date"
+            />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_edit_profile_telelphone"
@@ -117,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:drawableStart="@drawable/ic_baseline_call_24"
+            android:drawableStart="@drawable/selector_sign_email_icon"
             android:fontFamily="@font/open_sans"
             android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
