--- a/GardeningServices/app/src/main/res/layout/item_gender.xml
+++ b/GardeningServices/app/src/main/res/layout/item_gender.xml
@@ -1,8 +1,12 @@
-<TextView android:id="@+id/id_tv_gender_item"
+<TextView xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/id_tv_gender_item"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:fontFamily="@font/open_sans"
+    android:layout_height="50dp"
+    android:fontFamily="@font/open_sans_light"
     android:textColor="@color/black"
     android:textStyle="bold"
-    android:paddingLeft="45dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+    android:paddingTop="10dp"
+    android:paddingStart="20dp"
+    android:textSize="20sp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:ignore="RtlSymmetry" />
