--- a/GardeningServices/app/src/main/res/values/colors.xml
+++ b/GardeningServices/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="Pink1">#F2B9B3</color>
 
     <color name="Corner1">#C9FBDD</color>
+    <color name="Gray5">#C4CAC6</color>
 </resources>
