--- a/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
@@ -25,7 +25,7 @@
                 android:layout_marginStart="15dp"
                 android:src="@drawable/selector_back_activity"/>
             <TextView
-                android:id="@+id/tv_title_good"
+                android:id="@+id/cart_title_next_shipping"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:textSize="20sp"
