--- a/GardeningServices/app/src/main/res/layout/fragment_cart.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_cart.xml
@@ -28,9 +28,10 @@
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ScrollView
+        android:id="@+id/cart_sv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/corner_edt"
+        android:background="@drawable/corner_cart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_fragment_cart"
         app:layout_constraintBottom_toTopOf="@id/layout_price">
@@ -87,15 +88,17 @@
 <!--&lt;!&ndash;        </androidx.constraintlayout.widget.ConstraintLayout>&ndash;&gt;-->
 <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
     </ScrollView>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cart_btn_checkout"
-        android:background="@drawable/corner_edt"
-        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/cart_sv"
+        android:background="@drawable/corner_cart_green"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:padding="10dp">
         <TextView
             android:id="@+id/cart_item"
