--- a/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
@@ -42,20 +42,23 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_checkout_shipping"
-        app:layout_constraintBottom_toTopOf="@id/cart_btn_next_shipping"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_address_shipping"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"/>
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/cart_btn_next_shipping"
+        android:id="@+id/btn_add_address_shipping"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="@color/Green1"
         android:layout_margin="10dp"
-        android:text="Next"
-        android:textColor="@color/white"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="12dp"
+        android:backgroundTint="@color/Green1"
+        android:text="@string/add_address"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
