--- a/GardeningServices/app/src/main/res/layout/item_gender.xml
+++ b/GardeningServices/app/src/main/res/layout/item_gender.xml
@@ -1,6 +1,8 @@
 <TextView android:id="@+id/id_tv_gender_item"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:layout_marginLeft="35dp"
+    android:layout_marginRight="35dp"
     android:fontFamily="@font/open_sans"
     android:textColor="@color/black"
     android:textStyle="bold"
