--- a/GardeningServices/app/src/main/res/layout/activity_edit_address.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_edit_address.xml
@@ -128,11 +128,14 @@
         android:hint="@string/phoneNumber"
         app:boxStrokeColor="@color/Green1"
         app:hintTextColor="@color/Green1"
+        app:counterEnabled="true"
+        app:counterMaxLength="10"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_phoneNumber_address_edit"
             android:layout_width="match_parent"
+            android:inputType="number"
             android:lines="1"
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans"
@@ -143,7 +146,7 @@
         android:id="@+id/til_detail_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="15sp"
         android:layout_marginRight="20sp"
         android:layout_marginLeft="20sp"
         android:fontFamily="@font/open_sans"
