--- a/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
@@ -42,7 +42,7 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_checkout_shipping"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_address_shipping"
+        app:layout_constraintBottom_toTopOf="@id/btn_next_check_out"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -50,14 +50,14 @@
         android:layout_marginBottom="5dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_add_address_shipping"
+        android:id="@+id/btn_next_check_out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="12dp"
         android:backgroundTint="@color/Green1"
-        android:text="@string/add_address"
+        android:text="@string/nextStep"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
