--- a/GardeningServices/app/src/main/res/layout/fragment_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_profile.xml
@@ -88,6 +88,7 @@
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_address_management"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="40dp"
@@ -97,7 +98,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/productNameTextView"
             android:layout_height="match_parent"
-            android:text="Favourite"
+            android:text="Address"
             android:textAlignment="center"
             android:gravity="center" />
     </com.google.android.material.card.MaterialCardView>
@@ -112,7 +113,7 @@
             android:id="@+id/tv_edit_profile"
             style="@style/productNameTextView"
             android:layout_height="match_parent"
-            android:text="Edit profle"
+            android:text="Profile"
             android:textAlignment="center"
             android:gravity="center" />
     </com.google.android.material.card.MaterialCardView>
