--- a/GardeningServices/app/src/main/res/layout/fragment_favorite.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_favorite.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chat_rcV"
+        android:layout_width="match_parent"
+        android:background="@color/Gray5"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/chat_rl"/>
+    <RelativeLayout
+        android:id="@+id/chat_rl"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:text="favorite"
-        android:textSize="25dp"
-        />
-</LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chat_rcV"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <EditText
+            android:id="@+id/chat_edt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/chat_send"/>
+        <ImageButton
+            android:id="@+id/chat_send"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_baseline_send_24"
+            android:backgroundTint="@color/white"/>
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
