--- a/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_edit_profile.xml
@@ -51,7 +51,6 @@
                 android:lines="1"
                 android:drawableStart="@drawable/selector_sign_person_icon"
                 android:fontFamily="@font/open_sans"
-                android:inputType="textEmailAddress"
                 android:drawablePadding="10dp"
                 android:hint="Full name"
                 android:text="Name"
@@ -107,8 +106,8 @@
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/open_sans"
                 android:hint="Date"
-                android:text="00-00-0000"
-                android:lines="1" >
+                android:lines="1"
+                android:text="01-01-1999">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -136,7 +135,6 @@
                 android:inputType="number"
                 android:drawablePadding="10dp"
                 android:hint="Telephone"
-                android:text="0000000000"
                 />
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -157,10 +155,8 @@
                 android:lines="1"
                 android:drawableStart="@drawable/selector_sign_email_icon"
                 android:fontFamily="@font/open_sans"
-                android:inputType="textEmailAddress"
                 android:drawablePadding="10dp"
                 android:hint="Email"
-                android:text="Email"
                 />
         </com.google.android.material.textfield.TextInputLayout>
         <Button
