--- a/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Green3"
     tools:context=".SignInActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_parent"
@@ -19,10 +20,9 @@
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="80sp"
+                android:layout_marginTop="60sp"
                 android:src="@drawable/ic_icon_app"
-                app:layout_constraintTop_toBottomOf="parent"
-                />
+                app:layout_constraintTop_toBottomOf="parent"/>
             <TextView
                 android:id="@+id/tv1"
                 android:layout_width="match_parent"
@@ -123,62 +123,63 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/ly2"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/or"
-                android:textAlignment="center"
-                android:layout_marginBottom="10dp"
-                android:gravity="center_horizontal"
-                android:id="@+id/tv_or">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="60dp">
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/or"-->
+<!--                android:textAlignment="center"-->
+<!--                android:layout_marginBottom="10dp"-->
+<!--                android:gravity="center_horizontal"-->
+<!--                android:id="@+id/tv_or">-->
 
-            </TextView>
-            <Button
-                android:id="@+id/button_login_with_email"
+<!--            </TextView>-->
+<!--            <Button-->
+<!--                android:id="@+id/button_login_with_email"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_below="@id/tv_or"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:layout_marginRight="25dp"-->
+<!--                android:layout_marginLeft="25dp"-->
+<!--                android:background="@drawable/border_button_login_with_google"-->
+<!--                android:text="@string/Login_with_Google"-->
+<!--                android:drawableStart="@drawable/ic_sign_google"-->
+<!--                android:drawableLeft="@drawable/ic_sign_google"-->
+<!--                android:drawablePadding="10dp"-->
+<!--                android:paddingLeft="20dp"-->
+<!--                android:textColor="@color/Gray3"-->
+<!--                android:textStyle="normal" />-->
+<!--            <Button-->
+<!--                android:id="@+id/button_login_with_facebook"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:layout_marginRight="25dp"-->
+<!--                android:layout_marginLeft="25dp"-->
+<!--                android:layout_below="@id/button_login_with_email"-->
+<!--                android:text="@string/Login_with_Facebook"-->
+<!--                android:drawableStart="@drawable/ic_sign_facebook"-->
+<!--                android:background="@drawable/border_button_login_with_google"-->
+<!--                android:drawablePadding="10sp"-->
+<!--                android:paddingStart="20sp"-->
+<!--                android:paddingEnd="20sp"-->
+<!--                android:textColor="@color/Gray3"-->
+<!--                android:textStyle="normal" />-->
+            <TextView
+                android:id="@+id/tv_forgot_password"
                 android:layout_width="match_parent"
-                android:layout_below="@id/tv_or"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginLeft="25dp"
-                android:background="@drawable/border_button_login_with_google"
-                android:text="@string/Login_with_Google"
-                android:drawableStart="@drawable/ic_sign_google"
-                android:drawableLeft="@drawable/ic_sign_google"
-                android:drawablePadding="10dp"
-                android:paddingLeft="20dp"
-                android:textColor="@color/Gray3"
-                android:textStyle="normal" />
-            <Button
-                android:id="@+id/button_login_with_facebook"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginLeft="25dp"
-                android:layout_below="@id/button_login_with_email"
-                android:text="@string/Login_with_Facebook"
-                android:drawableStart="@drawable/ic_sign_facebook"
-                android:background="@drawable/border_button_login_with_google"
-                android:drawablePadding="10sp"
-                android:paddingStart="20sp"
-                android:paddingEnd="20sp"
-                android:textColor="@color/Gray3"
-                android:textStyle="normal" />
-                <TextView
-                    android:id="@+id/tv_forgot_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/Forgot_Password"
-                    android:textAlignment="center"
-                    android:textColor="@color/Green1"
-                    android:textSize="12sp"
-                    android:textStyle="bold"
-                    android:layout_below="@id/button_login_with_facebook"
-                     />
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="@string/Forgot_Password"
+                android:textAlignment="center"
+                android:textColor="@color/Green1"
+                android:textSize="12sp"
+                android:textStyle="bold" />
             <LinearLayout
                 android:id="@+id/lly"
                 android:layout_width="match_parent"
