--- a/GardeningServices/app/src/main/res/layout/fragment_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_profile.xml
@@ -22,114 +22,85 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/profile_cv_order_history"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/White2">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        style="@style/productNameTextView"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:text="Order"
+                        android:textAlignment="center"
+                        android:gravity="center" />
+                </RelativeLayout>
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_address_management"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/White2">
+                <androidx.appcompat.widget.AppCompatTextView
+                    style="@style/productNameTextView"
+                    android:layout_height="match_parent"
+                    android:text="Address"
+                    android:textAlignment="center"
+                    android:gravity="center" />
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/White2">
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_edit_profile"
+                    style="@style/productNameTextView"
+                    android:layout_height="match_parent"
+                    android:text="Profile"
+                    android:textAlignment="center"
+                    android:gravity="center" />
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/White2">
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_log_out"
+                    style="@style/productNameTextView"
+                    android:layout_height="match_parent"
+                    android:text="Log out"
+                    android:textAlignment="center"
+                    android:gravity="center" />
+            </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
     </RelativeLayout>
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <androidx.appcompat.widget.AppCompatTextView
-            style="@style/productNameTextView"
-            android:layout_height="match_parent"
-            android:text="My garden"
-            android:textAlignment="center"
-            android:gravity="center" />
-    </com.google.android.material.card.MaterialCardView>
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/profile_cv_calender"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                style="@style/productNameTextView"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:text="Calender"
-                android:textAlignment="center"
-                android:gravity="center" />
-        </RelativeLayout>
-    </com.google.android.material.card.MaterialCardView>
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/profile_cv_order_history"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                style="@style/productNameTextView"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:text="Order"
-                android:textAlignment="center"
-                android:gravity="center" />
-        </RelativeLayout>
-    </com.google.android.material.card.MaterialCardView>
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_address_management"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <androidx.appcompat.widget.AppCompatTextView
-            style="@style/productNameTextView"
-            android:layout_height="match_parent"
-            android:text="Address"
-            android:textAlignment="center"
-            android:gravity="center" />
-    </com.google.android.material.card.MaterialCardView>
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_edit_profile"
-            style="@style/productNameTextView"
-            android:layout_height="match_parent"
-            android:text="Profile"
-            android:textAlignment="center"
-            android:gravity="center" />
-    </com.google.android.material.card.MaterialCardView>
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_log_out"
-            style="@style/productNameTextView"
-            android:layout_height="match_parent"
-            android:text="Log out"
-            android:textAlignment="center"
-            android:gravity="center" />
-    </com.google.android.material.card.MaterialCardView>
+
 </LinearLayout>
