--- a/GardeningServices/app/src/main/res/layout/item_cart.xml
+++ b/GardeningServices/app/src/main/res/layout/item_cart.xml
@@ -77,7 +77,7 @@
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <Spinner
                     android:id="@+id/quantitySpinner"
-                    android:layout_width="wrap_content"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/gradient_spinner"
                     android:layout_centerVertical="true"
