--- a/GardeningServices/app/src/main/res/layout/activity_check_out_complete.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_check_out_complete.xml
@@ -49,13 +49,19 @@
                 android:fontFamily="@font/open_sans_bold"
                 android:text="Success" />
         </RelativeLayout>
-        <TextView
-            android:id="@+id/complete_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="23sp"
-            android:fontFamily="@font/open_sans_bold"
-            android:text="Please prepare 46660 to pay" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/complete_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="23sp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Please prepare 46660 to pay"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
